feat: add editable user profiles
